--- a/MyLittleMonster/Base.lproj/Main.storyboard
+++ b/MyLittleMonster/Base.lproj/Main.storyboard
@@ -68,6 +68,13 @@
                                     </imageView>
                                 </subviews>
                             </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="idle1" translatesAutoresizingMaskIntoConstraints="NO" id="vur-I9-6pO">
+                                <rect key="frame" x="-10" y="197" width="473" height="386"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="386" id="bSl-zI-Xav"/>
+                                    <constraint firstAttribute="width" constant="473" id="m2r-gE-5xa"/>
+                                </constraints>
+                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="UfC-jr-Hao">
                                 <rect key="frame" x="195" y="145" width="210" height="80"/>
                                 <subviews>
@@ -86,14 +93,9 @@
                                         </constraints>
                                     </imageView>
                                 </subviews>
+                                <variation key="heightClass=compact" axis="vertical" spacing="0.0"/>
+                                <variation key="heightClass=compact-widthClass=regular" spacing="25"/>
                             </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="idle1" translatesAutoresizingMaskIntoConstraints="NO" id="vur-I9-6pO">
-                                <rect key="frame" x="-10" y="197" width="473" height="386"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="386" id="bSl-zI-Xav"/>
-                                    <constraint firstAttribute="width" constant="473" id="m2r-gE-5xa"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -111,10 +113,16 @@
                             <constraint firstItem="UfC-jr-Hao" firstAttribute="top" secondItem="C0a-lW-PIB" secondAttribute="bottom" constant="23" id="Zui-Th-okG"/>
                             <constraint firstItem="C0a-lW-PIB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="agd-la-WdU"/>
                             <constraint firstAttribute="trailing" secondItem="DoE-Zy-SI0" secondAttribute="trailing" id="eAx-l5-bbs"/>
-                            <constraint firstItem="UfC-jr-Hao" firstAttribute="top" secondItem="C0a-lW-PIB" secondAttribute="bottom" constant="33" id="kSh-QB-sdI"/>
+                            <constraint firstItem="UfC-jr-Hao" firstAttribute="top" secondItem="C0a-lW-PIB" secondAttribute="bottom" constant="33" id="kSh-QB-sdI">
+                                <variation key="heightClass=compact" constant="15"/>
+                                <variation key="heightClass=compact-widthClass=regular" constant="33"/>
+                            </constraint>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="vur-I9-6pO" secondAttribute="bottom" constant="17" id="lKh-IY-uIz"/>
                             <constraint firstItem="C0a-lW-PIB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="q1H-IU-Riu"/>
-                            <constraint firstItem="UfC-jr-Hao" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="s3Y-Jn-oAH"/>
+                            <constraint firstItem="UfC-jr-Hao" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="s3Y-Jn-oAH">
+                                <variation key="heightClass=compact" constant="150"/>
+                                <variation key="heightClass=compact-widthClass=regular" constant="200"/>
+                            </constraint>
                             <constraint firstItem="C0a-lW-PIB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="18" id="tnX-Ac-AUj"/>
                             <constraint firstItem="C0a-lW-PIB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yGi-hL-rX0"/>
                             <constraint firstItem="vur-I9-6pO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-30" id="yQ7-t8-wBu"/>
