--- a/MyLittleMonster/Base.lproj/Main.storyboard
+++ b/MyLittleMonster/Base.lproj/Main.storyboard
@@ -68,7 +68,7 @@
                                     </imageView>
                                 </subviews>
                             </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="idle1" translatesAutoresizingMaskIntoConstraints="NO" id="vur-I9-6pO">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="idle1" translatesAutoresizingMaskIntoConstraints="NO" id="vur-I9-6pO" customClass="MonsterImg" customModule="MyLittleMonster" customModuleProvider="target">
                                 <rect key="frame" x="-10" y="197" width="473" height="386"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="386" id="bSl-zI-Xav"/>
